# binary_greedy_mesher_demo

./: Cargo.toml
assets/shaders/: chunk.wgsl  chunk_prepass.wgsl
benches/: chunk.rs  chunks_refs.rs  meshing.rs
examples/: main.rs
src/: chunk.rs  chunk.wgsl  chunk_mesh.rs  chunk_prepass.wgsl  chunks_refs.rs  diagnostics.rs  events.rs  face_direction.rs  greedy_mesher_optimized.rs  lib.rs  lod.rs  main.rs  quad.rs  rendering.rs  scanner.rs  sun.rs  utils.rs  voxel.rs  voxel_engine.rs
