[package]
name = "new_voxel_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.0"
bevy-inspector-egui = "0.29"
bevy_atmosphere = "0.12"
bevy_flycam = "0.15.0"
bevy_screen_diagnostics = { git = "https://github.com/mlupo19/bevy_screen_diagnostics.git", branch = "personal/0.15" }
bitflags = "2.8.0"
bracket-noise = "0.8.7"
futures-lite = "2.2.0"
indexmap = "2.7.1"
rand = "0.9"
rand_chacha = "0.9"
tinyvec = "1.6.0"

[dev-dependencies]
criterion = {version="0.5.1", features = ["html_reports"]}

# [[bench]]
# name = "chunk"
# harness = false

[[bench]]
name = "meshing"
harness = false

# [[bench]]
# name = "chunks_refs"
# harness = false
